charts/eck/kibana-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    common.k8s.elastic.co/type: kibana
    kibana.k8s.elastic.co/name: kibana
  name: kibana-kb-https
  namespace: elastic-monitoring
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: kibana-kb-http
    weight: 100
  wildcardPolicy: None
